--- a/src/static/index.html
+++ b/src/static/index.html
@@ -198,6 +198,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <h1>Mridul</h1>
             <h1>Shopify Wishlist App</h1>
             <p>A complete wishlist solution for your Shopify store</p>
         </div>
